# asl-cnn-classifier

./: .gitignore  .pre-commit-config.yaml  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_PROMPT.md  HANDOFF.md  MODEL_CARD.md  Makefile  README.md  SECURITY.md  app.py  pyproject.toml  requirements-demo.txt  requirements-dev.txt  requirements-handcrop.txt  requirements.txt  vercel.json
.github/: dependabot.yml
configs/: train_custom_cnn.yaml  train_diverse_hemg_balanced.yaml  train_diverse_hemg_efficientnet_b0.yaml  train_diverse_hemg_mobilenet_v3_small.yaml  train_mobilenet.yaml  train_real.yaml  train_real_mobilenet.yaml  train_real_mobilenet_cropped.yaml  train_real_mobilenet_cropped_clean.yaml  train_real_mobilenet_cropped_midaug.yaml  train_real_mobilenet_diverse.yaml  train_real_mobilenet_diverse_hemg.yaml  train_real_mobilenet_diverse_hemg_224.yaml  train_real_mobilenet_diverse_hemg_swa.yaml  train_real_mobilenet_diverse_midaug.yaml  train_robust_mobilenet.yaml
docs/: DEPLOY.md  EXPERIMENT_crop_consistent_retrain.md  EXPERIMENT_dashboard_honesty_and_loader.md  EXPERIMENT_data_diversity_scaling.md  EXPERIMENT_diverse_multisource.md  EXPERIMENT_model_caching.md  EXPERIMENT_resolution_224.md  EXPERIMENT_supply_exhausted_closure.md  EXPERIMENT_swa_label_smoothing.md
scripts/: check_eval_overlap.py  deploy_hf.py  extract_examples.py  fit_thresholds.py  gradcam_web.py  precrop_dataset.py  probe_asl_datasets.py  split_hemg.py  validate_dedup_thresholds.py
space/: README.md  requirements.txt
src/: benchmark.py  benchmark_backends.py  calibration.py  checkpoint.py  dataset.py  degradations.py  download_data.py  download_hf_data.py  eval.py  eval_realworld.py  export_onnx.py  gen_parity_fixtures.py  gradcam.py  handcrop.py  infer_camera.py  make_sample_data.py  model.py  plot_per_class.py  quantize.py  serve.py  train.py  utils.py
tests/: test_app.py  test_benchmark.py  test_calibration.py  test_check_eval_overlap.py  test_dataset.py  test_dataset_extra.py  test_deploy_hf.py  test_download_hf_data.py  test_eval.py  test_eval_realworld.py  test_gradcam.py  test_handcrop.py  test_infer.py  test_model.py  test_model_onnx_sync.py  test_parity_fixtures.py  test_pipeline.py  test_precrop.py  test_serving.py  test_split_hemg.py  test_train.py  test_transforms.py  test_utils.py
web/: .eslintrc.json  .gitignore  .prettierignore  DEPLOY.md  README.md  lighthouserc.json  next.config.mjs  package-lock.json  package.json  playwright.config.ts  (+3 more)
(+128 files in other folders)
