[project]
name = "asl-cnn-classifier"
version = "1.0.0"
description = "ASL Alphabet Classifier — production-quality CNN with honest cross-dataset evaluation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"
authors = [{name = "William Mar"}]
keywords = ["asl", "sign-language", "cnn", "pytorch", "mobilenet", "onnx"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2,<3.0",
    "torchvision>=0.17,<1.0",
    "opencv-python-headless>=4.8,<5.0",
    "numpy>=1.26,<2.2",
    "scikit-learn>=1.3,<2.0",
    "matplotlib>=3.7,<4.0",
    "seaborn>=0.13,<1.0",
    "tensorboard>=2.15,<3.0",
    "PyYAML>=6.0,<7.0",
    "pillow>=10.0,<12.0",
    "tqdm>=4.66,<5.0",
    "onnxruntime>=1.18,<2.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "kaggle>=1.6,<2.0",
    "datasets>=2.19,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "black>=24.0,<26.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.8,<2.0",
    "pre-commit>=3.7,<5.0",
    "onnx>=1.16,<2.0",
    "httpx>=0.27,<1.0",
    "imagehash>=4.3,<5.0",
    "types-PyYAML>=6.0,<7.0",
]
demo = ["gradio>=4.0,<6.0"]
handcrop = ["mediapipe>=0.10,<0.11"]

[project.urls]
Homepage = "https://github.com/billdmar/asl-cnn-classifier"
Demo = "https://asl-cnn-classifier.vercel.app"
Repository = "https://github.com/billdmar/asl-cnn-classifier"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# --- Tool configuration ---

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "torchvision.*",
    "sklearn.*",
    "seaborn.*",
    "cv2.*",
    "matplotlib.*",
    "tensorboard.*",
    "onnxruntime.*",
    "datasets.*",
    "mediapipe.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
